    + Skip NMU detection when handling NEWS files or creating a new changelog 

  [ James Vega ]
  * debian/control:
    + Change ssh Recommends to ssh-client.
    + Unify the tool descriptions to show the tools they use at the end of the
      description.
  * rc-alert: Allow the user to pass a list of packages to the script.
    (Closes: #474659)

 -- Martin Zobel-Helas <zobel@debian.org>  Sun, 06 Apr 2008 21:43:04 +0200

devscripts (2.10.23) unstable; urgency=low

  * Move the current Suggests: to Recommends: so that they are pulled in by
    default but may be removed if desired (Closes: #474559)
  * bug/presubj: Update in line with the change to Recommends:

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 06 Apr 2008 16:53:46 +0100

devscripts (2.10.22) unstable; urgency=low

  * bts: Allow a default list of e-mail addresses which should be sent copies
    of all generated e-mails to be specified (Closes: #474203)
  * debchange: Produce a more succinct and useful error message if
    libparse-debcontrol-perl isn't installed.  (Closes: #474476)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 06 Apr 2008 14:55:48 +0100

devscripts (2.10.21) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Allow SMTP authentication to be used when sending e-mails
    + Automatically append "thanks" and the contents of ~/.signature
      (if present) when --force-interactive was used (Closes: #474205)
  * bug/script:
    + Don't produce an error if either of the configuration files doesn't
      exist (Closes: #472748)
    + Don't include the BTS_SMTP_AUTH_* options
  * checkbashisms:
    + Strip off the quoted portion of a line that ends a "quoted block" before
      deciding whether it's a comment line and skipping it
    + Fix heredoc detection to match '<< \EOT ... EOT'
    + Improve the invalid function name test to not trigger on IFS="()"
    + Modify the brace expansion test to allow "${foo},${bar}"