@@ -19,6 +19,8 @@ devscripts (2.10.24) UNRELEASED; urgency=low
       description.
   * rc-alert: Allow the user to pass a list of packages to the script.
     (Closes: #474659)
+  * wnpp-alert: Allow the user to pass a list of packages to the script.
+    (Closes: #463665)
 
  -- Martin Zobel-Helas <zobel@debian.org>  Sun, 06 Apr 2008 21:43:04 +0200
 
